Revert "Update index.html"
This reverts commit c51acb5f525a9ccf13aa8cd79aca514a1c300d8b.

--- a/portfolio code 01/index.html
+++ b/portfolio code 01/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IsravelRaja - Robotics & IoT Portfolio</title>
+    <title>Alex Chen - Robotics & IoT Portfolio</title>
     
     <!-- Meta tags for SEO -->
     <meta name="description" content="Portfolio of Alex Chen, Robotics and IoT enthusiast with expertise in Arduino-based systems, mechanical design, and graphic branding.">
